# scikit-learn-nv

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/sklearn_nv/: kmeans.py
tests/: test_kmeans.py
